<resources>
    <string name="app_name">QuizApp-GT-4-2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_amount">Questions amount:</string>
    <string name="txt_q_count">5</string>
    <string name="category_q">Category</string>
    <string name="difficulty_q">Difficulty</string>
    <string name="start_btn">START</string>
    <string name="quiz_main_txt">Quiz</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="mythology">Mythology</string>
    <string name="count_question">0/0</string>
    <string name="vh_txt">According to Greek Mythology, Zeus can control lightning.</string>
    <string name="viewholder_txt">What is the largest city and commercial capital of Sri Lanka?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip">Skip</string>
    <string name="geography">Geography</string>
    <string name="america">America</string>
    <string name="austria">Austria</string>
    <string name="france">France</string>
    <string name="colombia">Colombia</string>
    <string name="category_mixed">Category: Mixed</string>
    <string name="correct_answers">Correct answers: 8/10</string>
    <string name="difficulty_all">Difficulty: All</string>
    <string name="card_date">12  january 2020 20:30</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
    <string name="difficulty">Difficulty:</string>
    <string name="all">All</string>
    <string name="correct_answers_card">Correct Answers :</string>
    <string name="corr_answer">5/10</string>
    <string name="result_card">Result :</string>
    <string name="fifty">50%</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="version">v 1.0.0</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>

    <string-array name="spinner_diff">
        <item>All</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="spinner_category">
        <item>All</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>

    </string-array>
</resources>
