<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/viewholder_txt_q"
        style="@style/RegularText"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:textSize="@dimen/vh_q_txt_size"
        android:text="@string/vh_txt"
        android:textColor="@color/colorDarkness_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/vh_layout_boolean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vh_btn_marginTop"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/item_vh_padding"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_txt_q"
        app:layout_constraintStart_toStartOf="@+id/viewholder_txt_q"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_txt_q">


        <Button
            android:id="@+id/viewholder_btn_first_boolean"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_choice"
            android:text="@string/yes"
            android:textColor="@color/colorBtnStart"
            android:textSize="@dimen/vh_btn_true_false_size" />

        <Button
            android:id="@+id/viewholder_btn_second_boolean"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/vh_btn_false_MarginTop"
            android:background="@drawable/bg_btn_choice"
            android:text="@string/no"
            android:textColor="@color/colorBtnStart"
            android:textSize="@dimen/vh_btn_true_false_size" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/vh_layout_multiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vh_btn_marginTop"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_txt_q"
        app:layout_constraintStart_toStartOf="@+id/viewholder_txt_q"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_txt_q">

        <Button
            android:id="@+id/viewholder_btn_first"
            android:background="@drawable/bg_btn_choice"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="@string/america"
            android:textSize="@dimen/vh_btn_true_false_size"
            android:textColor="@color/colorBtnStart"
            />

        <Button
            android:id="@+id/viewholder_btn_second"
            android:background="@drawable/bg_btn_choice"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="@string/austria"
            android:textSize="@dimen/vh_btn_true_false_size"
            android:textColor="@color/colorBtnStart"
            android:layout_marginTop="@dimen/viewholder_btn_marginTop"
            />


        <Button
            android:id="@+id/viewholder_btn_third"
            android:background="@drawable/bg_btn_choice"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="@string/france"
            android:textSize="@dimen/vh_btn_true_false_size"
            android:textColor="@color/colorBtnStart"
            android:layout_marginTop="@dimen/viewholder_btn_marginTop"

            />

        <Button
            android:id="@+id/viewholder_btn_fourth"
            android:background="@drawable/bg_btn_choice"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="@string/colombia"
            android:textSize="@dimen/vh_btn_true_false_size"
            android:textColor="@color/colorBtnStart"
            android:layout_marginTop="@dimen/viewholder_btn_marginTop"
            android:layout_marginBottom="@dimen/viewholder_btn_marginBottom"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>