<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <TextView
        android:id="@+id/viewholder_txt_q"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:text="@string/viewholder_txt"
        android:gravity="center"
        android:textColor="@color/colorDarkness_purple"
        style="@style/VH_Txt_Style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vh_txt_marginTop"/>


    <Button
        android:id="@+id/viewholder_btn_first"
        android:background="@drawable/bg_btn_choice"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_txt_q"
        app:layout_constraintStart_toStartOf="@+id/viewholder_txt_q"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_txt_q"
        android:text="@string/america"
        android:textSize="@dimen/vh_btn_true_false_size"
        android:textColor="@color/colorBtnStart"
        android:layout_marginTop="@dimen/vh_btn_marginTop"/>

    <Button
        android:id="@+id/viewholder_btn_second"
        android:background="@drawable/bg_btn_choice"

        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/austria"
        android:textSize="@dimen/vh_btn_true_false_size"
        android:textColor="@color/colorBtnStart"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_btn_first"
        app:layout_constraintStart_toStartOf="@+id/viewholder_btn_first"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_btn_first"
        android:layout_marginTop="@dimen/viewholder_btn_marginTop"
        />


    <Button
        android:id="@+id/viewholder_btn_third"
        android:background="@drawable/bg_btn_choice"

        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/france"
        android:textSize="@dimen/vh_btn_true_false_size"
        android:textColor="@color/colorBtnStart"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_btn_second"
        app:layout_constraintStart_toStartOf="@+id/viewholder_btn_second"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_btn_second"
        android:layout_marginTop="@dimen/viewholder_btn_marginTop"

        />


    <Button
        android:id="@+id/viewholder_btn_fourth"
        android:background="@drawable/bg_btn_choice"

        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/colombia"
        android:textSize="@dimen/vh_btn_true_false_size"
        android:textColor="@color/colorBtnStart"
        app:layout_constraintTop_toBottomOf="@+id/viewholder_btn_third"
        app:layout_constraintStart_toStartOf="@+id/viewholder_btn_third"
        app:layout_constraintEnd_toEndOf="@+id/viewholder_btn_third"
        android:layout_marginTop="@dimen/viewholder_btn_marginTop"

        />






</androidx.constraintlayout.widget.ConstraintLayout>