<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.settings.SettingsFragment">

    <TextView
        android:id="@+id/txt_settings_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings"
        style="@style/BoldText"
        android:layout_marginTop="@dimen/txt_quiz_main_marginTop"
        android:layout_marginStart="@dimen/txt_quiz_main_marginStart"/>



    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDark_purple"
        android:layout_marginTop="@dimen/view_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_main"/>

    <RelativeLayout
        android:id="@+id/relative_first"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/view_one">


    <TextView
        android:id="@+id/settings_txt_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/share_this_app"
        android:gravity="center|start"
        android:textColor="@color/Dark_grey"
        android:textSize="@dimen/txt_settings_size"
        android:background="?selectableItemBackground"
        android:layout_marginStart="@dimen/txt_settings_marginStart"
        style="@style/RegularText"
        />


        <ImageView
            android:id="@+id/settings_img_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_vector"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/settings_img_marginEnd"  />

    </RelativeLayout>

    <View
        android:id="@+id/view_second"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDark_purple"
        app:layout_constraintTop_toBottomOf="@+id/relative_first"/>


    <RelativeLayout
        android:id="@+id/relative_second"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/view_second">


        <TextView
            android:id="@+id/settings_txt_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rate_us"
            android:gravity="center|start"
            android:textColor="@color/Dark_grey"
            android:textSize="@dimen/txt_settings_size"
            android:background="?selectableItemBackground"
            android:layout_marginStart="@dimen/txt_settings_marginStart"
            style="@style/RegularText"
            />


        <ImageView
            android:id="@+id/settings_img_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_vector"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/settings_img_marginEnd"  />

    </RelativeLayout>

    <View
        android:id="@+id/view_third"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDark_purple"
        app:layout_constraintTop_toBottomOf="@+id/relative_second"/>



    <RelativeLayout
        android:id="@+id/relative_third"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/view_third">


        <TextView
            android:id="@+id/settings_txt_third"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/leave_feedback"
            android:background="?selectableItemBackground"
            android:gravity="center|start"
            android:textColor="@color/Dark_grey"
            android:textSize="@dimen/txt_settings_size"
            android:layout_marginStart="@dimen/txt_settings_marginStart"
            style="@style/RegularText"
            />


        <ImageView
            android:id="@+id/settings_img_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_vector"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/settings_img_marginEnd"  />

    </RelativeLayout>

    <View
        android:id="@+id/view_fourth"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDark_purple"
        app:layout_constraintTop_toBottomOf="@+id/relative_third"/>



    <RelativeLayout
        android:id="@+id/relative_fourth"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/view_fourth">


        <TextView
            android:id="@+id/settings_txt_fourth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/clear_history"
            android:background="?selectableItemBackground"
            android:gravity="center|start"
            android:textColor="@color/Dark_grey"
            android:textSize="@dimen/txt_settings_size"
            android:layout_marginStart="@dimen/txt_settings_marginStart"
            style="@style/RegularText"
            />


        <ImageView
            android:id="@+id/settings_img_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_vector"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/settings_img_marginEnd" />

    </RelativeLayout>

    <View
        android:id="@+id/view_fifth"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDark_purple"
        app:layout_constraintTop_toBottomOf="@+id/relative_fourth"/>



    <TextView
        android:id="@+id/quiz_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="@dimen/version_txt_size"
        style="@style/RegularText"
        android:textColor="@color/Light_grey"
        android:layout_marginTop="@dimen/version_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/view_fifth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>