<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.quiz.QuizActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_back_marginStart"
        android:layout_marginTop="@dimen/btn_back_marginTop"
        android:onClick="onClickBack"
        android:padding="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_button_back" />


    <TextView
        android:id="@+id/quiz_text_tittle"
        style="@style/SemiBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vh_txt_tittle_marginTop"
        android:text="@string/mythology"
        android:textColor="@color/colorDarkness_purple"
        android:textSize="@dimen/quiz_txt_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/quiz_progess_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="175dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/progress_bar_marginTop"
        android:indeterminate="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/quiz_text_tittle"
        app:layout_constraintStart_toStartOf="@+id/quiz_text_tittle"
        app:layout_constraintTop_toBottomOf="@+id/quiz_text_tittle" />

    <TextView
        android:id="@+id/quiz_txt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vh_txt_count_marginTop"
        android:text="@string/count_question"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/vh_txt_count_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/quiz_progess_bar"
        app:layout_constraintStart_toStartOf="@+id/quiz_progess_bar"
        app:layout_constraintTop_toBottomOf="@+id/quiz_progess_bar" />

    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ball"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quiz_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quiz_recycler_marginTop"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/quiz_txt_count" />


    <Button
        android:id="@+id/quiz_btn_answer"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/vh_btn_skip_marginBottom"
        android:background="@drawable/bg_btn_skip"
        android:onClick="onClickSkip"
        android:text="@string/skip"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/vh_btn_true_false_size"
        android:textStyle="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>